FP-877: Onb. Admin UI: New Fix 1: No Status Trunc…
Do not try to truncate `.status` (restored class) cell.

--- a/client/src/components/Onboarding/OnboardingAdmin.module.scss
+++ b/client/src/components/Onboarding/OnboardingAdmin.module.scss
@@ -96,7 +96,8 @@ tbody {
   /* Tweak `vertical-align`'s `top` to look like `middle` when nothing wraps */
   padding-top: calc(var(--cell-horizontal-padding) + var(--vertical-offset));
   vertical-align: top;
-
+}
+.step > td:not(.has-wrappable-content):not(.status) {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
